# virt_manager_rs

./: Cargo.toml
docs/: Scope and priority: Which device pages d.md  next_steps_202510161659.md
libvirtmanager/: Cargo.toml  TODO.md
libvirtmanager/src/: about.rs  addhardware.rs  app.rs  lib.rs
orig/: virt-manager.spec
virt_clone/: Cargo.toml
virt_install/: Cargo.toml
virt_install/virt-install/: Cargo.toml
virt_manager/: Cargo.toml
virt_manager/src/: main.rs
virt_manager_rs/: Cargo.toml
virt_xml/: Cargo.toml
virt_xml/virt-xml/: Cargo.toml
